fix: social links overflow on mobile

--- a/components/socialLinks/SocialLinks.module.scss
+++ b/components/socialLinks/SocialLinks.module.scss
@@ -5,6 +5,7 @@
         position: relative;
         display: flex;
         width: 100%;
+        height: 80px;
         // background-color: $color-primary;
         align-items: center;
         justify-content: center;
@@ -19,7 +20,7 @@
         -ms-transform: translateY(0px);
         -webkit-transform: translateY(0px);
         transform: translateY(0px);
-        max-height: 80px;
+
         $item: &;
 
         &:nth-child(4) {
@@ -32,7 +33,6 @@
             padding: 26px;
             transition: transform 300ms cubic-bezier(.66,.06,.53,.66);
             display: flex;
-            width: 100%;
             align-items: center;
             justify-content: center;
         }
