--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,11 @@
     }
 }
 
+html,
+body {
+    position: relative;
+}
+
 body {
     background: var(--background);
     color: var(--foreground);
